--- a/butterknife-integration-test/src/main/res/values/strings.xml
+++ b/butterknife-integration-test/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
   <string name="field_method">Field and method binding for Android views.</string>
   <string name="by_jake_wharton">by Jake Wharton</string>
   <string name="say_hello">Say Hello</string>
+  <string name="tinted_drawable">A tinted drawable</string>
 </resources>
